--- a/.sun-ci.yml
+++ b/.sun-ci.yml
@@ -7,7 +7,9 @@ stages:
 jobs:
 - name: build:prepare
   stage: build
-  image: sunci/ruby:2.7.1 script: - cp database-ci.yml config/database.yml
+  image: manhbnt/ruby:2.7.1
+  script:
+  - cp database-ci.yml config/database.yml
   - bundle _2.1.4_ install --path vendor/bundle  # _2.1.4_ if ruby 2.7.1 or 3.0.2
   cache:
   - key: vendor_$CI_BRANCH
@@ -26,14 +28,14 @@ jobs:
       MYSQL_PASSWORD: password_test
       MYSQL_ROOT_PASSWORD: password_test
   before_script:
-#  - bundle _2.1.4_ install --path vendor/bundle # _2.1.4_ if ruby 2.7.1 or 3.0.2
-#  script:
-#  - RAILS_ENV=test bundle exec rails db:drop db:create db:migrate
-#  - bundle _2.1.4_ exec rspec # _2.1.4_ if ruby 2.7.1 or 3.0.2
+  - bundle _2.1.4_ install --path vendor/bundle # _2.1.4_ if ruby 2.7.1 or 3.0.2
+  script:
+  - RAILS_ENV=test bundle exec rails db:drop db:create db:migrate
+  - bundle _2.1.4_ exec rspec # _2.1.4_ if ruby 2.7.1 or 3.0.2
 
 - name: test:rubocop
   stage: test
-  image: sunci/ruby:2.7.1
+  image: manhbnt/ruby:2.7.1
   before_script:
   - bundle _2.1.4_ install --path vendor/bundle # _2.1.4_ if ruby 2.7.1 or 3.0.2
   script:
