--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
-    "@popperjs/core": "^2.11.4",
-    "bootstrap": "^5.1.3",
+    "@popperjs/core": "^2.10.2",
+    "admin-lte": "^3.2.0",
+    "bootstrap": "^4.6",
     "bootstrap-icons": "^1.8.1",
+    "bootstrap-switch": "^3.3.4",
     "esbuild": "^0.14.31",
-    "sass": "^1.49.11"
+    "font-awesome": "^4.7.0",
+    "jquery": "3.5.1",
+    "moment": "^2.29.2",
+    "moment-timezone": "^0.5.31",
+    "popper.js": "^1.16.1",
+    "sass": "^1.49.11",
+    "tempusdominus-core": "5.19.3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
