--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.10.2",
@@ -10,7 +11,6 @@
     "bootstrap-icons": "^1.8.1",
     "bootstrap-switch": "^3.3.4",
     "esbuild": "^0.14.31",
-    "font-awesome": "^4.7.0",
     "jquery": "3.5.1",
     "moment": "^2.29.2",
     "moment-timezone": "^0.5.31",
